@@ -2,6 +2,8 @@ ChangeLog for Pylint
 ====================
 
 --
+    * Add new warning for unpacking non-sequences in assignments
+
     * Add check for the use of 'exec' function
 
     * New --msg-template option to control output, deprecating "msvc" and
